--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
         image: nginx:alpine
         restart: unless-stopped
         ports:
-            - "8989:80"
+            - "8080:80"
         volumes:
             - ./:/var/www
             - ./docker/nginx/:/etc/nginx/conf.d/
@@ -41,6 +41,17 @@ services:
             - ./.docker/mysql/dbdata:/var/lib/mysql
         ports:
             - "3388:3306"
+        networks:
+            - laravel
+
+    #phpmyadmin
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin
+        restart: unless-stopped
+        environment:
+            PMA_HOST: db
+        ports:
+            - "8989:80"
         networks:
             - laravel
 
